--- a/public/css/index.css
+++ b/public/css/index.css
@@ -15,7 +15,8 @@ body{
     box-sizing: border-box;
     overflow: hidden;
     font-family: 'poppins', sans-serif;
-    background: linear-gradient(45deg, rgb(255 219 158), rgb(253 243 220));
+    /*background: linear-gradient(45deg, rgb(255 219 158), rgb(253 243 220));*/
+    background: linear-gradient(313deg, #0b1a2b 33%, #3a6291 111%);
 
 }
 
