--- a/public/css/about.css
+++ b/public/css/about.css
@@ -16,7 +16,8 @@ body{
     overflow: hidden;
     font-family: 'poppins', sans-serif;
     /*background: linear-gradient(45deg, rgb(255 219 158), rgb(253 243 220));*/
-    background: linear-gradient(313deg, #0b1a2b 33%, #3a6291 111%);
+    /*background: linear-gradient(313deg, #0b1a2b 33%, #3a6291 111%);*/
+    background: url("galaxy.png");
 
 }
 
