--- a/public/css/index.css
+++ b/public/css/index.css
@@ -256,6 +256,7 @@ body{
 
 #location-title-h2{
     margin-bottom: 0;
+    text-align: center;
 }
 #previous-next-button{
 
@@ -280,7 +281,6 @@ body{
     /*background: blue;*/
     height: 250px;
     width: 380px;
-
 
 
 }
@@ -421,6 +421,7 @@ body{
         transform: translateX(-50%);
         pointer-events: none;
 
+        width: 380px;
 
 
     }
