--- a/public/css/index.css
+++ b/public/css/index.css
@@ -248,15 +248,6 @@ body{
 
 /*  HINTS */
 
-
-/*#title-buttons-div{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}*/
-
 #location-title-h2{
     margin-bottom: 0;
     text-align: center;
@@ -272,7 +263,7 @@ body{
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     color: white;
     margin: auto;
@@ -288,6 +279,23 @@ body{
 
 }
 
+#hints-header{
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+    /*background: orange;*/
+
+}
+
+#title-buttons-div{
+
+    width: 100%;
+}
+
 .hints-container  input, .hints-container > #hints-div { /* allow clicking button or scrolling */
 
     pointer-events: auto;
@@ -300,10 +308,19 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    /*background: orange;*/
     flex-wrap: wrap;
+    /*width: 300px;*/
+    width: 100%;
 }
 
+#show-hints-answer-container{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+}
 
 #hints-div {
 
@@ -337,10 +354,6 @@ body{
 
 @media(max-width:1056px ) {
 
-/*    .no-pointer-event{
-
-        pointer-events: none;
-    }*/
 
     .hints-container{
 
@@ -370,17 +383,8 @@ body{
         margin-left: 20px;
         /*background: orange;*/
 
-
-
     }
 
-
-    #show-hints{
-
-        width: 100%;
-
-
-    }
 
     #hints-div{
 
@@ -429,21 +433,21 @@ body{
 
     }
 
-
-
     #hints-header{
 
         all: unset;
         /*position: absolute;*/
         top: 0;
-        width: max-content;
+        /*width: max-content;*/
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         /*background: red;*/
+        width: 100%;
 
     }
+
 
     #hints-div{
 
@@ -471,11 +475,6 @@ body{
 
 @media(max-width:600px ) {
 
-/*    .no-pointer-event{
-
-        pointer-events: none;
-    }*/
-
 
     #navbar{
 
@@ -488,15 +487,8 @@ body{
 
         display: none;
     }
+
     .hints-container{
-
-    }
-
-    #hints-header{
-
-    }
-
-    #hints-div{
 
     }
 
@@ -529,4 +521,28 @@ body{
 
     background: #fff;
     color: #ff4c4c ;
+}
+
+
+#attempt-div{
+
+    margin-top: 5px;
+    padding: 0px 5px;
+
+}
+
+.blink-text {
+
+    padding: 0px 5px;
+    width: max-content;
+    border-radius: 5px;
+    background: #ffe5e5;
+    color: /*#ffcccb*/red;
+    animation: blinker 2s linear infinite;
+}
+
+@keyframes blinker {
+    100% {
+        opacity: 0;
+    }
 }
