finished login system and user chart

--- a/public/css/loader.css
+++ b/public/css/loader.css
@@ -11,7 +11,8 @@
 
 .loader {
 
-    border: 10px solid /*#f3f3f3*/whitesmoke;
+    border: 10px solid /*#f3f3f3*/ #363949;
+;
     border-radius: 50%;
     border-top: 10px solid /*#3498db*/black;
     width: 20px;
@@ -29,4 +30,10 @@
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+
+.hide{
+
+    display: none;
 }
