--- a/public/css/skeletonLoading.css
+++ b/public/css/skeletonLoading.css
@@ -1,3 +1,33 @@
+:root{
+
+
+    --color-primary: #7380ec;
+    --color-danger: #ff7782;
+    --color-success: #41f1b6;
+    --color-warning: #ffbb55;
+    --color-white: #fff;
+    --color-info-dark: #78da1;
+    --color-info-light: #dce1eb;
+    --color-dark: #363949;
+    --color-light: rgba(132, 139, 200, 0.18);
+    --color-primary-variant: #111e88;
+    --color-dark-variant: #677483;
+    --color-background: #f6f6f9;
+
+    --card-border-radius: 2rem;
+    --border-radius-1: 0.4rem;
+    --border-radius-2: 0.8rem;
+    --border-radius-3: 1.2rem;
+
+    --card-padding: 1.8rem;
+    --padding-1: 1.2rem;
+
+    --box-shadow: 0 2rem 3em var(--color-light);
+
+    /* DARK THEME */
+    --color-theme-dark: #181a1e;
+}
+
 .skeleton{
 
     /*opacity: .9;*/
@@ -9,13 +39,13 @@
     0%{
 
         /*background-color: hsl(200, 20%, 70%);*/
-        background-color: #f1f1f5;
+        background-color: var(--color-dark);
     }
 
     100%{
 
         /*background-color: hsl(200, 20%, 95%);*/
-        background-color: #c1c1c1;
+        background-color: var(--color-theme-dark);
     }
 }
 
@@ -25,6 +55,14 @@
     color: transparent;
 
 }
+
+.skeleton-text *{
+
+    opacity: 0;
+    color: transparent;
+
+}
+
 .skeleton-body-text{
 
     color: transparent;
