--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,25 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-html, body{
+:root{
+
+    --color-theme-dark: #181a1e;
+}
+*{
+    /*margin: 0;
+    padding: 0;
+    outline: 0;
+    appearance: none;
+    border: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;*/
+}
+
+html,body{
 
     margin: 0;
     width: 100%;
     height: 100%;
-    /*background: linear-gradient(313deg, #0b1a2b 33%, #3a6291 111%);*/
-
 }
-
 body{
-    margin: 0;
-    padding:0;
-    box-sizing: border-box;
-    overflow: hidden;
-    font-family: 'poppins', sans-serif;
+
+    /*width: 100vw;*/
+    /*height: 100vh;*/
+    font-family: "Poppins", sans-serif;
+    font-size: 0.88rem;
+    user-select: none;
     /*background: linear-gradient(45deg, rgb(255 219 158), rgb(253 243 220));*/
     /*background: linear-gradient(313deg, #0b1a2b 33%, #3a6291 111%);*/
 
     /*background: url("../client/public-copy1/assets/textures/galaxy.png");*/
     background: url("./galaxy.png");
+
 }
 
 
@@ -32,32 +46,15 @@ body{
     font-weight: 500;
     cursor: pointer;
     background: #fff;
-    color: #101010;
+    /*color: #101010;*/
+    color: var(--color-theme-dark);
     /*transition: background, color ease-in-out 1000ms 5000ms;*/
-}
-
-#get-hint-button{
-
-    background: #1877F2/*#e3e7f3*/ /*#e5ecf8*//*#e3e7f3*/;
-    color: /*#326cc7*/#fff;
-}
-#get-hint-button:hover{
-
-/*    background: #84A6DD !*#e5ecf8*!!*#e3e7f3*!;
-    color: #e3e7f3 ;*/
-    background:#fff;
-    color:  #1877F2;
-}
-
-.visibilityHidden{
-
-    visibility: hidden;
 }
 
 
 .btn:hover{
 
-    background: #101010;
+    background: var(--color-theme-dark);
     color: #fff;
 }
 
@@ -65,12 +62,20 @@ body{
 .btn:active{
 
     background: #fff;
-    color: #101010;
+    color: var(--color-theme-dark);
     transition-delay: 1000ms;
 }
 
 
+main{
 
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+}
 /* INTRO */
 #intro-div{
 
@@ -110,471 +115,3 @@ body{
     margin: 1rem 0;
 }
 
-
-
-/* ANSWERS */
-.answer-container h1 {
-
-    /*display: inline-block;*/
-    color: white;
-}
-
-.answer-container {
-
-    position: absolute;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: transparent;
-
-
-}
-
-.answer-container div {
-
-    width: 80%;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.answer-container div input[type="text"] {
-
-    width: 50%;
-    background: transparent;
-    color: white;
-    height: 1.0em;
-    /*box-sizing: border-box;*/
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    outline: none;
-    font-size: 20px;
-    text-align: center;
-
-    padding: 20px 0px;
-    box-sizing: border-box;
-
-}
-
-.answer-container div input[type="text"]:focus {
-
-
-    border-color: white;
-    box-sizing: border-box;
-
-}
-
-.answer-container div input[type="button"] {
-
-    margin: 0 0 0 10px;
-
-}
-
-.invalid/*input[type="text"]:invalid*/ {
-
-    animation: shake 300ms;
-    border-color: red ;
-
-}
-
-@keyframes shake {
-
-    25%{
-        transform: translateX(4px);
-    }
-
-    50%{
-        transform: translateX(4px);
-    }
-
-    75%{
-        transform: translateX(4px);
-    }
-}
-
-
-
-
-/*  HINTS */
-
-#location-title-h2{
-    margin-bottom: 0;
-    text-align: center;
-}
-#previous-next-button{
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-}
-.hints-container{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    margin: auto;
-    position: absolute;
-    top:50%;
-    right: 20px;
-    transform: translateY(-50%);
-    background: transparent;
-    /*background: blue;*/
-    height: 250px;
-    width: 380px;
-
-
-}
-
-#hints-header{
-
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-left: 20px;
-    /*background: orange;*/
-
-}
-
-#title-buttons-div{
-
-    width: 100%;
-}
-
-.hints-container  input, .hints-container > .hints-div { /* allow clicking button or scrolling */
-
-    pointer-events: auto;
-}
-
-
-#show-hints{
-
-    /*width: 80%;*/
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    /*width: 300px;*/
-    width: 100%;
-}
-
-#show-hints-answer-container{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-}
-
-.hints-div {
-
-    width: 100%;
-    text-align: center;
-    overflow-y: scroll;
-    height: 100%;
-    margin-top: 20px;
-
-
-}
-
-.structure-flag-emoji{
-
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-.structure-flag-emoji > span:nth-child(2){
-
-    font-size: 100px;
-}
-
-.hints-p:not(:first-child){ /* keeps the first <p> tag at top and give the rest margins */
-
-    /*border-top: 10px;*/
-}
-
-.hide{
-
-    display: none;
-}
-
-
-
-/*.no-pointer-event{
-
-    pointer-events: none;
-}*/
-
-
-@media(max-width:1056px ) {
-
-
-    .hints-container{
-
-        all: unset;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        color: white;
-        margin: 0 0 20px 0;
-        position: absolute;
-        bottom: 0;
-        height: 150px;
-        /*background: blue;*/
-
-
-
-    }
-
-    #hints-header{
-
-        width: 40%;
-        overflow: scroll;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-left: 20px;
-        /*background: orange;*/
-
-    }
-
-
-    .hints-div{
-
-        /*all: unset;*/
-        display: flex;
-        flex-direction: column;
-        width: 60%;
-        overflow-y: scroll;
-        height: 100%;
-        margin-right: 20px;
-
-        /*background: red;*/
-
-    }
-
-    .structure-flag-emoji {
-
-        all: unset;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 60%;
-        height: 100%;
-        margin-right: 20px;
-
-    }
-
-    .structure-flag-emoji > span {
-
-        width: 100%;
-    }
-
-    .hide{
-
-        display: none;
-    }
-}
-
-
-@media(max-width:940px ) {
-
-/*    .no-pointer-event{
-
-        pointer-events: none;
-    }*/
-
-    .hints-container{
-
-        all: unset;
-        position: absolute;
-        display: flex;
-
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        color: white;
-        /*background: orange;*/
-        left: 50%;
-        transform: translateX(-50%);
-        pointer-events: none;
-
-        width: 380px;
-
-
-    }
-
-    #hints-header{
-
-        all: unset;
-        /*position: absolute;*/
-        top: 0;
-        /*width: max-content;*/
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        /*background: red;*/
-        width: 100%;
-
-    }
-
-
-    .hints-div {
-
-        all: unset;
-        height: 100px;
-        display: flex;
-        flex-direction: column;
-        overflow-y: scroll;
-        text-align: center;
-        margin-top: 5px;
-        position: relative;
-        top: 430px;
-
-        /*background: blue;*/
-        width: 100%;
-
-    }
-
-    .structure-flag-emoji{
-
-        all: unset;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        position: relative;
-        top: 430px;
-
-        width: 100%;
-
-    }
-
-
-    .hide{
-
-        display: none;
-    }
-}
-
-
-@media(max-width:600px ) {
-
-
-    /*#navbar{
-
-        position: absolute;
-        left: 0;
-        bottom: 0;
-    }
-
-    #navbar-container{
-
-        display: none;
-    }*/
-
-
-    .hide{
-
-        display: none;
-    }
-}
-
-
-.capital-text,
-#welcome-name{
-
-    background: #e3e7f3;
-    padding: 5px;
-    color: #8395ca;
-    border-radius: 5px;
-}
-
-.end-button{
-
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 3rem;
-    font-weight: 500;
-    cursor: pointer;
-    background: #ff4c4c;
-    color:#fff ;
-}
-.end-button:hover{
-
-    background: #fff;
-    color: #ff4c4c ;
-}
-
-
-#attempt-div{
-
-    margin-top: 5px;
-    padding: 0px 5px;
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
-
-    justify-content: center;
-    align-items: center;
-}
-
-.blink-text {
-
-    padding: 0px 5px;
-    width: max-content;
-    border-radius: 5px;
-    background: #ffe5e5;
-    color: /*#ffcccb*/red;
-    animation: blinker 2s linear infinite;
-}
-
-@keyframes blinker {
-    100% {
-        opacity: 0;
-    }
-}
-
-
-
-.show-found-attempt-div{
-
-    display: flex;
-
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-}
-
-
-.show{
-
-    display: block;
-}
-
-
-.selected{
-
-    background: /*#101010*/ #e8fbe8;
-    /*color: #fff ;*/
-    border-bottom: white 1px solid;
-}
