--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -1,130 +1,3 @@
-/*
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
-.container{
-    padding: 50px;
-}
-
-.card{
-    width: 300px;
-    height: max-content!*420px*!;
-    background: #e3e7f3;
-    !*background-color: #1E2B32;*!
-    border-radius: 10px 10px;
-}
-
-.header{
-    border-radius: 10px 10px 0px 0px;
-    padding: 5px;
-    background-color:  #adb9dc;
-}
-
-h3{
-    color: #FFFFFF;
-    font-family: 'Poppins', sans-serif;
-    margin-left: 1rem;
-}
-
-.iconM{
-    font-size: 18px;
-    margin-left: 170px;
-    color: #2f89fc;
-}
-
-.icon{
-    margin-right: 8px;
-}
-
-.body li{
-    transition: 1s all;
-    font-family: 'Poppins', sans-serif;
-    font-size: 18px;
-    padding: 15px;
-    margin-left: -40px;
-    margin-top: 0px;
-    color: #fff;
-    list-style: none;
-    display: block;
-    border-top-right-radius: 10px 10px;
-    border-bottom-right-radius: 10px 10px;
-}
-span{
-    color: black;
-}
-li:hover{
-    transition: 1s all;
-    color: #adb9dc;
-    background-color: rgba(42, 56, 65, 0.82);
-    border-top-right-radius: 10px 10px;
-    border-bottom-right-radius: 10px 10px;
-    cursor: pointer;
-}
-
-.body > li{
-    float: left;
-}
-
-!*.body li ul{
-    background: #1E2B32;
-    margin-left: 280px;
-    margin-top: -38px;
-    display: none;
-    position: absolute;
-    border-top-right-radius: 15px 15px;
-    border-bottom-right-radius: 15px 15px;
-}*!
-
-
-.body li ul{
-    background: #1E2B32;
-    !*margin-left: 280px;*!
-    !*right: 500px;*!
-    margin-top: 15px;
-    display: none;
-    position: absolute;
-    !*left: 0px;*!
-    !*border-top-right-radius: 15px 15px;*!
-    !*border-top-right-radius: 15px 15px;*!
-    border-top-left-radius: 15px 15px;
-    border-bottom-left-radius: 15px 15px;
-}
-
-.body li:hover > ul{
-    display: block;
-    cursor: pointer;
-}
-
-
-.position-settings{
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-}
-
-.right{
-
-    position: absolute;
-    right: 0;
-    transform: translate(0%, 50%);
-}
-.left{
-
-    position: absolute;
-    left: 0;
-    transform: translate(0%, 50%);
-}
-.middle{
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}*/
-
-
-
-/*h1 {padding: 40px; text-align: center; font-size: 1.5em;}*/
 
 .settings-box {
 
@@ -134,7 +7,7 @@ li:hover{
     width : 50%;
     transform: translate(-50%, -50%);
     /*background: #d9d9d9;*/
-    background: #e3e7f3;
+    /*background: #e3e7f3;*/
     border-radius: 5px;
 
 }
@@ -272,7 +145,7 @@ input[id="country-count"]{
 
   /*background: #8395ca;
   color: #e3e7f3 ;*/
-  background: /*#101010*/ /*#e8fbe8*/ rgb(148, 192, 255);
+  background: /*#101010*/ /*#e8fbe8*/ #edeffd;
   /*color: #fff ;*/
     border-bottom: white 1px solid;
 
