added email verification for extra security

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -330,3 +330,14 @@ body{
     text-decoration: none;
 
 }
+
+.email-error{
+
+    margin-bottom: 5px;
+    visibility: hidden;
+
+}
+.email-error-text{
+
+    color: var(--color-danger);
+}
