--- a/public/css/stats.css
+++ b/public/css/stats.css
@@ -1,7 +1,7 @@
 :root{
 
 
-    /*--color-primary: #7380ec;*/
+    --color-primary: #7380ec;
     --color-danger: #ff7782;
     --color-success: #41f1b6;
     --color-warning: #ffbb55;
