updated game settings color

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -145,7 +145,7 @@ input[id="country-count"]{
 
   /*background: #8395ca;
   color: #e3e7f3 ;*/
-  background: /*#101010*/ /*#e8fbe8*/ #edeffd;
+  background: /*#101010*/ /*#e8fbe8*/ /*#edeffd*/ #ffbb55;
   /*color: #fff ;*/
     border-bottom: white 1px solid;
 
