--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -1,3 +1,37 @@
+:root{
+
+    --color-primary: #7380ec;
+    --color-danger: #ff7782;
+    --color-success: #41f1b6;
+    --color-warning: #ffbb55;
+    /*--color-white: #fff;*/
+    --color-info-dark: #78da1;
+    --color-info-light: #dce1eb;
+    /*--color-dark: #363949;*/
+    /*--color-light: rgba(132, 139, 200, 0.18);*/
+    --color-primary-variant: #111e88;
+    /*--color-dark-variant: #677483;*/
+    --color-background: #f6f6f9;
+
+    --card-border-radius: 2rem;
+    --border-radius-1: 0.4rem;
+    --border-radius-2: 0.8rem;
+    --border-radius-3: 1.2rem;
+
+    --card-padding: 1.8rem;
+    --padding-1: 1.2rem;
+
+    /*--box-shadow: 0 2rem 3em var(--color-light);*/
+
+    /* DARK THEME */
+    --color-theme-dark: #181a1e;
+    --color-white: #202528 ;
+    --color-dark: #edeffd;
+    --color-dark-variant: #a3bdcc;
+    --color-light: rgba(0,0,0,0.4);
+    --box-shadow: 0 2rem 3em var(--color-light);
+
+}
 
 .settings-box {
 
@@ -31,7 +65,7 @@
 
 .settings-box-title {
     padding : 30px;
-    background : #101010/*#020024*//*#333333*//*#2d2f31*/;
+    background : #0e1012/*#101010*/ /*#020024*//*#333333*//*#2d2f31*/;
     color : white;
     font-size : 1.2em;
     font-variant : small-caps;
