--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 :root{
+
 
     --color-primary: #7380ec;
     --color-danger: #ff7782;
@@ -30,184 +33,157 @@
     --color-dark-variant: #a3bdcc;
     --color-light: rgba(0,0,0,0.4);
     --box-shadow: 0 2rem 3em var(--color-light);
-
-}
-
-.settings-box {
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width : 50%;
-    transform: translate(-50%, -50%);
-    /*background: #d9d9d9;*/
-    /*background: #e3e7f3;*/
-    border-radius: 5px;
-
-}
-
-.settings-modes-div:first-child >.settings-box-title,
-.settings-modes-div:first-child
-{
-
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-}
-
-.settings-modes-div:last-child >.settings-box-title,
-.settings-modes-div:last-child
-{
-
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
 }
 
 
-.settings-box-title {
-    padding : 30px;
-    background : #0e1012/*#101010*/ /*#020024*//*#333333*//*#2d2f31*/;
-    color : white;
-    font-size : 1.2em;
-    font-variant : small-caps;
-    cursor : pointer;
-    display: block;
 
-}
-
-.settings-box-title:not(:last-child)::after {
-    float: right;
-    right: 10%;
-    content: "+";
-}
-
-.slide {
-
-    clear:both;
-    height:0px;
-    overflow-y: scroll;
-    text-align: center;
-    transition: height .4s ease;
+*{
     margin: 0;
     padding: 0;
-    /*position: relative;*/
-}
-
-.slide li {
-
-    padding : 20px;
+    outline: 0;
+    appearance: none;
+    border: 0;
+    text-decoration: none;
     list-style: none;
-    cursor: pointer;
-    /*position: relative;*/
-
-}
-
-.settings-modes-div{
-
-    position: relative;
-    /*background: #e3e7f3;*/
-    /*color: #8395ca;*/
-    background: #fff;
-    color: #020024;
-
-}
-
-.settings-mode{
-
-    position: absolute;
-    top: 0;
-    left: 5px;
-    font-size: 15px;
+    box-sizing: border-box;
 }
 
 
-input[id="country-count"]{
+body{
 
+    width: 100vw;
+    height: 100vh;
+    font-family: "Poppins", sans-serif;
+    font-size: 0.88rem;
+    /*background: var(--color-background);*/
+    /*background: var(--color-theme-dark);*/
+    /*background: url("./galaxy.png");*/
+
+    user-select: none;
+    overflow-x: hidden;
+    color:  var(--color-dark);
+    /* DARK THEME */
+    --color-theme-dark: #181a1e;
+    --color-white: #202528 ;
+    --color-dark: #edeffd;
+    --color-dark-variant: #a3bdcc;
+    --color-light: rgba(0,0,0,0.4);
+    --box-shadow: 0 2rem 3em var(--color-light);
+
+}
+
+
+.container{
+
+    display: flex;
+    width: 100%;
     height: 100%;
-    font-size : 1.2em;
-    /*background : #2d2f31;*/
-    background: transparent;
-    /*position: relative;*/
-    border-radius: 5px;
-    text-align: center;
-    color: #d9d9d9;
-    /*background: transparent;*/
+}
 
+
+.left-container{
+
+    background: #00d4ff;
+    flex-basis: 30%;
+}
+
+
+/* RIGHT CONTAINER */
+
+.right-container{
+
+    background: #5bfdba;
+    flex-basis: 70%;
 
 }
 
-.settings-modes-div > input[type="checkbox"] {position: absolute; opacity: 0; height: 0px;}
+.right-container .right-container-items{
 
+    width: 95%;
+    margin: auto;
+    background: #3a6291;
+    height: 80%;
+}
 
+.right-container .right-container-items h1{
 
-.settings-modes-div:hover /*> input:checked*/   .slide { height: 192px;}
-/*.settings-modes-div > input:checked + .slide { height: 192px;}*/
-
-
-/* SETTINGS */
-
-#start-button{
-
-    position: absolute;
-    top: 90%;
-    left: 50%;
-    transform: translateX(-50%);
+    margin-top: 2rem;
 
 }
 
-/*ul*/.slide > li:hover  .settings-info{
 
-    display: block;
-    position: absolute;
-    /*top: 32%;*/
-    top: 32%;
-    right: 0%;
-    width: 100px;
-    transform: translate(100%/*, 50%*/);
-/*    background: #e3e7f3;
-    color: #8395ca;*/
-    background: #fff;
-    color: #020024;
-    padding: 5px;
-    font-size: 10pt;
+/* INPUTS */
+.input-container{
+
+    display: flex;
+    /*flex-direction: column;*/
+    justify-content: space-between;
+    align-items: start;
+    /*gap: 1rem;*/
+    flex-wrap: wrap;
+    padding-top: 20px;
+    /*padding-bottom: 20px;*/
+    background-color: #e0e4ff;
+
+    height: 80%;
+    /*flex-basis: 50%;*/
+
+}
+
+
+.input-container .input-container-items{
+
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /*padding-top: 20px;*/
+
+    /*margin-bottom: 20px;*/
+
+    /*margin-right: 10px;*/
+
+    height: 15%;
+    flex-basis: 50%;
+
+    border-color: black;
+
+    /*position: relative; !* to move exclamation mark around *!*/
+
+    background-color: #D83D61;
+
+}
+
+/* [ ICONS ] */
+.icon-container{
+
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--color-theme-dark);
+
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    background-color: var(--color-theme-dark);
+}
+
+.icon-container i {
+
+    color: #c1c1c1;
+}
+
+.account-input{
+
+    width: 80%;
+    margin: 0;
+    height: 100%;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 
-}
-
-
-.select-country, .selected-mode{
-
-  /*background: #8395ca;
-  color: #e3e7f3 ;*/
-  background: /*#101010*/ /*#e8fbe8*/ /*#edeffd*/ #ffbb55;
-  /*color: #fff ;*/
-    border-bottom: white 1px solid;
-
-}
-
-
-
-#select-all-country-li{
-
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    cursor: default;
-}
-
-#search-box{
-
-    width: 80%;
-    border: none;
-    border-bottom: 1px black solid;
-    font-family: 'Poppins', serif ;
-    text-align: center;
-
-}
-
-#search-box:focus-within{
-
-    outline: none;
-    border: none;
-    border-bottom: 1px black solid;
+    outline: none !important;
+    border: 1px var(--color-theme-dark) solid;
+    padding-left: 10px;
 }
