--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -38,6 +38,7 @@
 #navbar{
 
     position: absolute;
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
