--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -39,6 +39,7 @@
 
     position: absolute;
     top: 0;
+    right: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
