--- a/public/css/userSettings.css
+++ b/public/css/userSettings.css
@@ -51,7 +51,7 @@
 
 body{
 
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     width: 100vw;
     height: 100vh;
     font-family: "Poppins", sans-serif;
@@ -80,18 +80,20 @@ body{
 .container{
 
     width: 80%;
-    height: 90%;
+    height: 80%;
+    min-height: 80%;
+    /*max-height: 80%;*/
+    /*width: 80vw;*/
+    /*height: 90vh;*/
 
 }
 
 .settings-container{
 
     display: flex;
-    /*width: 100%;*/
-    /*height: 100%;*/
-    color: white;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    color: white;
     margin: auto;
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius-1);
@@ -357,7 +359,8 @@ body{
 
 .update-cancel-buttons{
 
-    margin-top: 5rem;
+    margin-top: 10%;
+    margin-bottom: 10%;
     width: 50%;
     display: flex;
     column-gap: 1rem;
@@ -460,4 +463,5 @@ body{
         justify-content: center;
         align-items: start;
     }
+
 }
