--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -59,8 +59,25 @@
 
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     padding: 0.5rem 1.5rem;
 
+}
+
+#home-nav-item{
+
+    margin-top: 1em;
+    margin-right: 1rem;
+    cursor: pointer;
+
+}
+
+#home-nav-item .home-img{
+
+    /*width: 100%;*/
+    /*height: 35px;*/
+    margin: auto;
+    object-fit: cover;
 }
 
 .nav-items{
