--- a/public/css/play.css
+++ b/public/css/play.css
@@ -22,9 +22,7 @@ body{
     font-family: 'poppins', sans-serif;
     /*background: linear-gradient(45deg, rgb(255 219 158), rgb(253 243 220));*/
     /*background: linear-gradient(313deg, #0b1a2b 33%, #3a6291 111%);*/
-
-    /*background: url("../client/public-copy1/assets/textures/galaxy.png");*/
-    background: url("./galaxy.png");
+    background: url("../assets/images/galaxy.png");
 
     font-size: 0.88rem;
     user-select: none;
