--- a/public/css/register.css
+++ b/public/css/register.css
@@ -61,7 +61,7 @@ body{
     /*background: linear-gradient(313deg, #0b1a2b 33%, #3a6291 111%);*/
 
     /*background: url("../client/public-copy1/assets/textures/galaxy.png");*/
-    background: url("./galaxy.png");
+    background: url("../assets/images/galaxy.png");
 
 }
 
