--- a/public/css/stats.css
+++ b/public/css/stats.css
@@ -55,7 +55,7 @@ body{
     font-size: 0.88rem;
     /*background: var(--color-background);*/
     /*background: var(--color-theme-dark);*/
-    background: url("./galaxy.png");
+    background: url("../assets/images/galaxy.png");
 
     user-select: none;
     overflow-x: hidden;
